readability and copy-fixes

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -2,8 +2,9 @@
   padding: 4rem 0;
   background: url('/img/banner-blur.png') no-repeat;
   background-size: cover;
+  background-color: black;
   background-position: 0rem -10.5vw;
-  color: var(--oppositeBGText);
+  color: var(--text);
   text-shadow: var(--title-shadow);
   font-weight: bold;
   text-transform: capitalize;
